--- a/session4/homework4_shan_valleru.html
+++ b/session4/homework4_shan_valleru.html
@@ -523,6 +523,44 @@ tible %&gt;%
 # remove    
 # If TRUE, remove input columns from output data frame.
 # If FALSE, keeps the old column and creates a new variable.</code></pre>
+<p><strong>Baby Names</strong></p>
+<pre class="r"><code>file_path &lt;- &quot;/Users/svalleru/Desktop/UCB/COMPSCIX415.2-003 - Intro to DS/compscix-415-2-assignments/session4/baby_names.txt&quot;
+baby_names &lt;- read_delim(file = file_path, delim = &quot;|&quot;)</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   year = col_double(),
+##   sex = col_character(),
+##   name = col_character(),
+##   n = col_double(),
+##   prop = col_double()
+## )</code></pre>
+<pre class="r"><code>glimpse(baby_names)</code></pre>
+<pre><code>## Observations: 30,000
+## Variables: 5
+## $ year &lt;dbl&gt; 1880, 1880, 1880, 1880, 1880, 1880, 1880, 1880, 1880, 1880,…
+## $ sex  &lt;chr&gt; &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;,…
+## $ name &lt;chr&gt; &quot;Mary&quot;, &quot;Anna&quot;, &quot;Emma&quot;, &quot;Elizabeth&quot;, &quot;Minnie&quot;, &quot;Margaret&quot;, …
+## $ n    &lt;dbl&gt; 7065, 2604, 2003, 1939, 1746, 1578, 1472, 1414, 1320, 1288,…
+## $ prop &lt;dbl&gt; 0.072384329, 0.026679234, 0.020521700, 0.019865989, 0.01788…</code></pre>
+<pre class="r"><code>new_file_path &lt;- &quot;/Users/svalleru/Desktop/UCB/COMPSCIX415.2-003 - Intro to DS/compscix-415-2-assignments/session4/baby_names_new.txt&quot;
+write_delim(baby_names, delim = &quot;^&quot;, path = new_file_path)
+new_baby_names &lt;- read_delim(file = new_file_path, delim = &quot;^&quot;)</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   year = col_double(),
+##   sex = col_character(),
+##   name = col_character(),
+##   n = col_double(),
+##   prop = col_double()
+## )</code></pre>
+<pre class="r"><code>glimpse(new_baby_names)</code></pre>
+<pre><code>## Observations: 30,000
+## Variables: 5
+## $ year &lt;dbl&gt; 1880, 1880, 1880, 1880, 1880, 1880, 1880, 1880, 1880, 1880,…
+## $ sex  &lt;chr&gt; &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;, &quot;F&quot;,…
+## $ name &lt;chr&gt; &quot;Mary&quot;, &quot;Anna&quot;, &quot;Emma&quot;, &quot;Elizabeth&quot;, &quot;Minnie&quot;, &quot;Margaret&quot;, …
+## $ n    &lt;dbl&gt; 7065, 2604, 2003, 1939, 1746, 1578, 1472, 1414, 1320, 1288,…
+## $ prop &lt;dbl&gt; 0.072384329, 0.026679234, 0.020521700, 0.019865989, 0.01788…</code></pre>
 
 
 
